# EyeDiseaseDetection

./: .gitattributes  .gitignore  DockerFile  Handler.py  PreProcessing.ipynb  README.md  Training.ipynb  config.json  gradio-inference.py  main.py  pyproject.toml  requirements.txt  training.ipynb
.github/workflows/: main.yml
EDA/: General_EDA.py
EDA/eda_output/reports/: eda_report_20250421_220319.md
eda_output/reports/: eda_report_20250421_220319.html
util/: DatasetProcessor.py  ImageProcessor.py  Trainer.py  Validator.py
utils/: Callback.py  Comparator.py  DatasetHandler.py  Evaluator.py  ModelCreator.py  Trainer.py
weights/: efficientvit.pth  gernet.pth  levit.pth  mobilenetv4.pth  regnetx.pth
