[project]
name = "eyediseasedetection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
  "gradio>=5.29.0",
  "matplotlib>=3.10.3",
  "pandas>=2.2.3",
  "scikit-learn>=1.6.1",
  "seaborn>=0.13.2",
  "timm>=1.0.15",
  "torch>=2.7.0",
  "torchaudio>=2.7.0",
  "torchvision>=0.22.0",
  "tqdm>=4.67.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
